added tmux and vim mouse scrolling operations

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,4 @@
+bind-key b send-prefix
 # Increase history buffer size to 50K
 set-option -g history-limit 50000
 
@@ -17,3 +18,11 @@ set -g bell-on-alert on
 #  normally makes a sound).  Also see the bell-action
 #  option.
 #set -g visual-bell on
+
+# mouse scrolling
+set -g mouse on
+# to enable mouse scroll, see https://github.com/tmux/tmux/issues/145#issuecomment-150736967
+#bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'copy-mode -e'"
+
+#bind -n WheelUpPane if "[[ #{pane_current_command} =~ vim ]]" "select-pane -t = ; send-keys -M" "select-pane -t = ; send-keys Up"
+#bind -n WheelDownPane if "[[ #{pane_current_command} =~ vim ]]" "select-pane -t = ; send-keys -M" "select-pane -t = ; send-keys Down"
